--- a/portfolio-1/src/index.css
+++ b/portfolio-1/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .basic {
-  @apply flex items-center justify-center text-white rounded-3xl hover:shadow hover:shadow-xl;
+  @apply flex items-center justify-center text-white rounded-3xl hover:shadow hover:shadow-xl hover:scale-105
     
 }
 
