--- a/portfolio-1/src/animation.css
+++ b/portfolio-1/src/animation.css
@@ -107,12 +107,12 @@
       }
       100% {
         transform: translate(0, 0) scale(1);
-        opacity: 0.65;
+        opacity: 1;
       }
     }
   
   .moving-6 {
-    opacity: 0.65;
+    /* opacity: 0.65; */
     animation: div6 3s ease forwards;
   }
 
