--- a/portfolio-1/src/index.css
+++ b/portfolio-1/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .basic {
-  @apply flex text-white rounded-3xl hover:shadow-xl
+  @apply flex text-white rounded-3xl hover:shadow-lg hover:scale-105 hover:shadow-gray-300
     
 }
 
@@ -12,7 +12,7 @@
 }
 
 .progressBar {
-  @apply flex flex-col w-full h-full justify-around scale-[0.80]
+  @apply flex flex-col w-full h-full justify-around scale-[0.80] gap-8 -mt-8
 }
 
 .dark1 {
@@ -56,20 +56,20 @@
 
 
 .radio-button__input:checked + .radio-button__label .radio-button__custom {
-  background-color: #4c8bf5;
+  background-color: #33373f;
   border-color: transparent;
   transform: scale(0.8);
-  box-shadow: 0 0 20px #4c8bf580;
+  box-shadow: 0 0 20px #95969880;
 }
 
 .radio-button__input:checked + .radio-button__label {
-  color: #4c8bf5;
+  color: black;
 }
 
 .radio-button__label:hover .radio-button__custom {
   transform: scale(1.2);
-  border-color: #4c8bf5;
-  box-shadow: 0 0 20px #4c8bf580;
+  border-color: black;
+  box-shadow: 0 0 20px #95969880;
 }
 
 .radio-button__custom {
