--- a/portfolio-1/src/index.css
+++ b/portfolio-1/src/index.css
@@ -15,6 +15,10 @@
   @apply flex flex-col w-full h-full justify-around scale-[0.80] gap-8 -mt-8
 }
 
+/* .hideContent {
+  @apply 
+} */
+
 .dark1 {
   color: #F8AFA6;
   background: #F8AFA6;
