--- a/portfolio-1/src/animation.css
+++ b/portfolio-1/src/animation.css
@@ -1,27 +1,44 @@
 /* Animations for App.jsx */
 
-
 @keyframes div1 {
-    0% {
-        transform: translate(0%, 30%) scale(0.1);
-        opacity: 0;
-        z-index: 5;
-      }
-    40% {
-        transform: translate(0%, 30%) scale(0.1);
-        opacity: 0;
-        z-index: 5;
-      }
-      100% {
-        transform: translate(0, 0) scale(1);
-        opacity: 1;
-        z-index: 5;
-      }
+  0% {
+      transform: translate(0%, 30%) scale(0.1);
+      opacity: 0;
+      z-index: 5;
     }
-  
-  .moving-1 {
-    animation: div1 2.2s ease forwards;
+  40% {
+      transform: translate(0%, 30%) scale(0.1);
+      opacity: 0;
+      z-index: 5;
+    }
+  100% {
+      transform: translate(0, 0) scale(1);
+      opacity: 1;
+      z-index: 5;
+    }
   }
+  
+.moving-1 {
+  animation: div1 2.2s ease forwards;
+  }
+
+@keyframes div1e {
+  0% {
+    transform: translate(0%, 0%) scale(1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translate(0%, 100%) scale(0.1);
+    opacity: 0;
+  }
+}
+
+.exiting-1 {
+  animation: div1e 0.8s ease forwards;
+}
+
+
 
 @keyframes div2 {
     0% {
@@ -43,6 +60,22 @@
   
   .moving-2 {
     animation: div2 2.5s ease forwards;
+  }
+
+  @keyframes div2e {
+    0% {
+      transform: translate(0%, 0%) scale(1);
+      opacity: 1;
+    }
+  
+    100% {
+      transform: translate(0%, 100%) scale(0.1);
+      opacity: 0;
+    }
+  }
+  
+  .exiting-2 {
+    animation: div2e 0.8s ease forwards;
   }
 
 @keyframes div3 {
@@ -68,17 +101,17 @@
   }
 
 @keyframes div4 {
-    0% {
+  0% {
         transform: translate(-30%, 0%) scale(0.1);
         opacity: 0;
         z-index: 3;
       }
-    50% {
+  50% {
         transform: translate(-30%, 0%) scale(0.1);
         opacity: 0;
         z-index: 3;
       }
-    100% {
+  100% {
         transform: translate(0, 0) scale(1);
         opacity: 1;
         z-index: 3;
@@ -90,44 +123,44 @@
   }
 
 @keyframes div5 {
-    0% {
+  0% {
         transform: translate(100%, -150%) scale(0.1);
         opacity: 0;
         z-index: 2;
       }
-    50% {
+  50% {
         transform: translate(60%, -75%) scale(0.1);
         opacity: 0;
         z-index: 2;
       }
-    100% {
+  100% {
         transform: translate(0, 0) scale(1);
         opacity: 1;
         z-index: 2;
       }
-    }
+  }
   
   .moving-5 {
     animation: div5 2.85s ease forwards;
   }
 
 @keyframes div6 {
-    0% {
+  0% {
         transform: translate(0%, -150%) scale(0.1);
         opacity: 0; 
         z-index: 1;
       }
-    50% {
+  50% {
         transform: translate(0%, -80%) scale(0.1);
         opacity: 0;
         z-index: 1;
       }
-      100% {
+  100% {
         transform: translate(0, 0) scale(1);
         opacity: 1;
         z-index: 1;
       }
-    }
+  }
   
   .moving-6 {
     /* opacity: 0.65; */
@@ -135,22 +168,22 @@
   }
 
 @keyframes div7 {
-    0% {
+  0% {
         transform: translate(-180%, -300%) scale(0.1);
         opacity: 0;
         z-index: 0;
       }
-    50% {
+  50% {
         transform: translate(-90%, -250%) scale(0.1);
         opacity: 0;
         z-index: 0;
       }
-      100% {
+  100% {
         transform: translate(0, 0) scale(1);
         opacity: 1;
         z-index: 0;
       }
-    }
+  }
   
   .moving-7 {
     animation: div7 3.2s ease forwards;
@@ -160,82 +193,82 @@
   /* Animations for Projects.jsx */
 
   /* Projects Page Navbar */
-  @keyframes divpn { 
-    0% {
+@keyframes divpn { 
+  0% {
         transform: translate(30%, 30%) scale(0.1);
         opacity: 0;
         z-index: 10;
       }
-    50% {
+  60% {
         transform: translate(30%, 30%) scale(0.1);
         opacity: 0;
         z-index: 10;
       }
-    100% {
+  100% {
         transform: translate(0, 0) scale(1);
         opacity: 1;
         z-index: 10;
       }
-    }
+  }
 
-    .moving-pn {
-      animation: divpn 1.2s ease forwards;
-    }
+  .moving-pn {
+      animation: divpn 1.5s ease forwards;
+  }
 
-    @keyframes divp1 { 
-      0% {
-          transform: translate(50%, -60%) scale(0.1);
-          opacity: 0;
-          z-index: 8;
-        }
-      30% {
-          transform: translate(50%, -60%) scale(0.1);
-          opacity: 0;
-          z-index: 8;
-        }
-      100% {
-          transform: translate(0, 0) scale(1);
-          opacity: 1;
-          z-index: 8;
-        }
-      }
+@keyframes divp1 { 
+  0% {
+      transform: translate(50%, -60%) scale(0.1);
+      opacity: 0;
+      z-index: 8;
+    }
+  60% {
+      transform: translate(50%, -60%) scale(0.1);
+      opacity: 0;
+      z-index: 8;
+    }
+  100% {
+      transform: translate(0, 0) scale(1);
+      opacity: 1;
+      z-index: 8;
+    }
+  }
   
-      .moving-p1 {
-        animation: divp1 1.4s ease forwards;
-      }
+  .moving-p1 {
+    animation: divp1 1.75s ease forwards;
+  }
       
 
-      @keyframes divp2 { 
-        0% {
-            transform: translate(30%, -60%) scale(0);
-            opacity: 0;
-            z-index: 7;
-          }
-        30% {
-            transform: translate(300%, -60%) scale(0);
-            opacity: 0;
-            z-index: 7;
-          }
-        100% {
-            transform: translate(0, 0) scale(1);
-            opacity: 1;
-            z-index: 7;
-          }
-        }
+@keyframes divp2 { 
+  0% {
+      transform: translate(30%, -60%) scale(0.1);
+       opacity: 0;
+      z-index: 7;
+    }
+   60% {
+      transform: translate(300%, -60%) scale(0.1);
+      opacity: 0;
+      z-index: 7;
+    }
+   100% {
+      transform: translate(0, 0) scale(1);
+      opacity: 1;
+      z-index: 7;
+     }
+   }
     
-        .moving-p2 {
-          animation: divp2 1.6s ease forwards;
-        }
+  .moving-p2 {
+     animation: divp2 2s ease forwards;
+   }
       
 
         @keyframes divp3 { 
           0% {
-              transform: translate(50%, -60%) scale(0);
+              transform: translate(50%, -60%) scale(0.1);
               opacity: 0;
               z-index: 6;
             }
-          30% {
-              transform: translate(50%, -60%) scale(0);
+          60% {
+              transform: translate(50%, -60%) scale(0.1);
               opacity: 0;
               z-index: 6;
             }
@@ -247,17 +280,17 @@
         }
       
         .moving-p3 {
-            animation: divp3 1.8s ease forwards;
+            animation: divp3 2.2s ease forwards;
         }
           
         @keyframes divp4 { 
           0% {
-              transform: translate(40%, -50%) scale(0);
+              transform: translate(40%, -50%) scale(0.1);
               opacity: 0;
               z-index: 5;
               }
-          30% {
-              transform: translate(40%, -50%) scale(0);
+          60% {
+              transform: translate(40%, -50%) scale(0.1);
               opacity: 0;
               z-index: 5;
               }
@@ -268,27 +301,27 @@
               }
         }
         .moving-p4 {
-          animation: divp4 2s ease forwards;
+          animation: divp4 2.4s ease forwards;
         }
 
-        @keyframes divp5 { 
-          0% {
-              transform: translate(60%, -50%) scale(0);
-              opacity: 0;
-              z-index: 4;
+@keyframes divp5 { 
+  0% {
+    transform: translate(60%, -50%) scale(0.1);
+    opacity: 0;
+    z-index: 4;
             }
-          30% {
-              transform: translate(600%, -50%) scale(0);
-              opacity: 0;
-              z-index: 4;
+  60% {
+    transform: translate(600%, -50%) scale(0.1);
+    opacity: 0;
+    z-index: 4;
             }
-          100% {
-              transform: translate(0, 0) scale(1);
-              opacity: 1;
-              z-index: 4;
+  100% {
+    transform: translate(0, 0) scale(1);
+    opacity: 1;
+    z-index: 4;
             }
-          }
+  }
       
-          .moving-p5 {
-            animation: divp5 2.2s ease forwards;
-          }
+  .moving-p5 {
+  animation: divp5 2.6s ease forwards;
+  }
