--- a/portfolio-1/src/index.css
+++ b/portfolio-1/src/index.css
@@ -12,7 +12,7 @@
 }
 
 .progressBar {
-  @apply flex flex-col w-full h-full justify-around scale-[0.80] gap-8 -mt-8
+  @apply flex flex-col w-full h-full scale-[0.80] items-center gap-y-8 -mt-11
 }
 
 /* .hideContent {
