--- a/portfolio-1/src/index.css
+++ b/portfolio-1/src/index.css
@@ -79,3 +79,17 @@
 .radio-button__custom {
   transition: all 0.3s ease;
 }
+
+.custom-bullet {
+  position: relative;
+  padding-left: 1.5rem; /* Adjust spacing for the bullet */
+}
+
+.custom-bullet::before {
+  content: '•'; /* The bullet symbol */
+  position: absolute;
+  left: 0;
+  top: 0.2rem; /* Adjust this value based on the text size */
+  font-size: 2.25rem; /* Adjust the size of the bullet */
+  color: black; /* Change bullet color */
+}
