--- a/portfolio-1/src/index.css
+++ b/portfolio-1/src/index.css
@@ -15,7 +15,28 @@
   @apply flex flex-col w-full h-full items-center mobile:gap-y-[60px] tablet:gap-y-[80px] laptop:gap-y-[60px] desktop:gap-y-[55px] screen14:mt-[10px] screen14:gap-y-[30px] screen16:gap-y-[10px]
 }
 
+.projectTopDiv {
+  @apply flex w-full h-1/3 pt-4 
+  tablet:pt-3 laptop:pt-4 px-4
+}
 
+.projectHeadingDiv {
+  @apply w-3/5 text-[23px] desktop:text-3xl font-semibold
+}
+
+.projectLinkIcon {
+  @apply w-2/5 flex justify-end mobile:text-2xl tablet:text-[20px] laptop:text-[27px] desktop:text-3xl
+}
+
+.projectDes {
+  @apply text-2xl text-justify
+            
+  mobile:text-lg mobile:mt-10 mobile:pb-4 tablet:text-[15px] tablet:mt-0 tablet:pb-2 laptop:text-[20px] desktop:text-2xl
+}
+
+.techImg {
+  @apply h-[40px] w-[40px] pr-2
+}
 
 .dark1 {
   color: #F8AFA6;
